Finish making abort function